<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ohsanghun.awe_fragments.BundleSimpleFragment"
    android:layout_margin="10dp">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/seek_bar_name"
            android:ems="10"
            android:id="@+id/editText"
            android:textSize="24sp"
            android:textAlignment="center" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:max="245"
            android:progress="30" />

        <Button
            android:text="@string/seekbar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekbar_button" />

    </LinearLayout>

</LinearLayout>
