<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bundle_fragment_mother_with"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ohsanghun.awe_fragments.BundleFragmentMotherWithActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bundle_fragment">

        <TextView
            android:text="@string/interaction_mother_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/send_bundle_to_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendBundleToFragment"
            android:onClick="onClick" />

        <EditText
            android:text="@string/interaction_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/interactionValue"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
